--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,11 @@
   <title>Vero | Developers</title>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
+  <script src="/assets/js/fout.js"></script>
+  <script src="/assets/js/main.js"></script>
   <script type='text/javascript' src='//fast.fonts.net/jsapi/bd23cf03-685d-4ec1-b306-4adae883ab02.js'></script>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/styles/solarized_dark.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
   <link rel="stylesheet" type="text/css" href="//d3qxef4rp70elm.cloudfront.net/app.min.css?ver=2.2.2">
   <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <script src="/assets/js/main.js"></script>
 </head>
