tidy up CSS and things

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav id="sidebar">
-  <div id="logo"></div>
+  <div id="logo"><img src="http://assets.getvero.com.s3.amazonaws.com/marketing-redesign/logo-blue.svg"></div>
   <ul>
     <li>API</li>
     <li>
