--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav id="sidebar">
-  <div id="logo"><img src="http://assets.getvero.com.s3.amazonaws.com/marketing-redesign/logo-blue.svg"></div>
+  <div id="logo"><a href="https://www.getvero.com"><img src="http://assets.getvero.com.s3.amazonaws.com/marketing-redesign/logo-blue.svg"></a></div>
   <h4 class="label">API v2.0</h4>
   <ul class="api-nav unstyled-list">
     {% for api in site.data.sections.api %}
